# xmedia

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Doxyfile  README.md  RELEASE.md  conanfile.py  copy_deps.cmake  copy_deps.py  version.txt  xsdk_conan.cmake
.github/workflows/: static.yml
include/: xmedia.h  xmedia_enums.h  xmedia_errors.h  xmedia_functions.h  xmedia_interfaces.h  xmedia_structures.h
include/constants/: av_codec_ids.h  av_codec_options.h  av_constants.h  av_pixel_formats.h  av_props.h  av_protocols_ids.h  av_sample_formats.h  common.h  constants.h  mixer_constants.h  ndi_constants.h  overlay_constants.h  stat_constants.h  writer_constants.h  xcommands_constants.h  xmedia_constants.h
include/constants/av_codec_options/: av_a_decoder_options.h  av_a_encoder_options.h  av_s_decoder_options.h  av_s_encoder_options.h  av_v_decoder_options.h  av_v_encoder_options.h
include/functions/: commands_functions.h  common_helpers.h  container_functions.h  factory_functions.h  format_functions.h  frame_functions.h  links_functions.h  mixer_functions.h  mixing_functions.h  overlay_functions.h  player_functions.h  playlist_functions.h  scheme_functions.h  time_functions.h  tonode_functions.h  tostring_functions.h  writer_functions.h
include/interfaces/: audio_processing_interfaces.h  cef_interfaces.h  handlers_factory_interfaces.h  media_active_interfaces.h  media_buffers_interfaces.h  media_commands_interfaces.h  media_converter_interfaces.h  media_device_interfaces.h  media_events_interfaces.h  media_handler_interfaces.h  media_links_interfaces.h  media_mixer_interfaces.h  media_objects_interfaces.h  media_overlay_interfaces.h  media_players_interfaces.h  media_playlist.h  media_playlist_interfaces.h  media_props_interfaces.h  media_reader_interfaces.h  media_schemes_interfaces.h  media_streams_interfaces.h  media_writer_interfaces.h  objects_factory_interfaces.h  socket_interfaces.h
include/video_sdk.win/: media_finder.h  vsdk_wrappers.h
include/video_sdk.win/sdk_headers/: MFormats.h  MPlatform.h
lib/linux/: README.md
lib/macos/: README.md
lib/windows/: README.md
samples/: CMakeLists.txt  container_config.scheme.json
samples/get_data/: CMakeLists.txt  xmedia_get_data.cpp
samples/get_data/sample_schemes/: xm_decode_from_file.json  xm_decode_from_ndi.json
samples/include/: command_line.hpp  helpers.hpp
samples/multiple_sinks/: CMakeLists.txt  README.md  multiple_sinks.cpp
samples/put_data/: CMakeLists.txt  xmedia_put_data.cpp
samples/put_data/sample_schemes/: xm_encode_to_ndi_with_clock.json
samples/server/: CMakeLists.txt  helpers.hpp  xmedia_server.cpp
samples/server/schemes_examples/: xmedia_containers_test.av_serial_transcode.scheme.json  xmedia_containers_test.av_serial_transcode_selector.scheme.json
samples/transcoding/: CMakeLists.txt  xmedia_transcoding.cpp
samples/transwraping/: CMakeLists.txt  xmedia_transwarping.cpp
samples/video_mixer/: CMakeLists.txt  README.md  video_mixer.cpp
submodules/: CMakeLists.txt
